--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,7 @@ pydoctor==22.5.1
 matplotlib==3.5.2
 seaborn==0.11.2
 uvicorn
-statsmodels
+statsmodels==0.13.2
+tables==3.6.1
+tabulate==0.8.9
+TBB==0.2
